@@ -2,6 +2,7 @@ This file documents the revision history for Perl Application 'Task::BeLike::JJN
 
 0.04 2010-09-17
     - Swapped MI::Github with MI::Repository for non github based projects.
+    - Swapped MI::ReadmePodFromPod to MI::ReadMeMarkdownFromPod.
     - Added MI::Homepage and MI::License for more automation.
     - Changed Makefile.PL to reflect and test above.  Addes docs as well.
 
